tests/purs/failing/InfiniteKind2.purs
-- @shouldFailWith InfiniteKind

module InfiniteKind2 where

data Tree m = Tree (m Tree)
